--- a/test6/用例/个人信息查询.md
+++ b/test6/用例/个人信息查询.md
@@ -54,7 +54,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#account">Account</a>
-### <a href="../数据库表设计#student">Student</a>
-### <a href="../数据库表设计#teacher">Teacher</a>
+### <a href="../数据库表设计.md#account">Account</a>
+### <a href="../数据库表设计.md#student">Student</a>
+### <a href="../数据库表设计.md#teacher">Teacher</a>
 
