--- a/test6/用例/成绩查询.md
+++ b/test6/用例/成绩查询.md
@@ -51,8 +51,8 @@
 无
 
 ## 5.参照表
-#### <a href="../数据库表设计#test">Test</a>
-#### <a href="../数据库表设计#testSub">TestSub</a>
-#### <a href="../数据库表设计#testScore">TestScore</a>
-#### <a href="../数据库表设计#testSubTestScore">TestSub_TestScore</a>
+#### <a href="../数据库表设计.md#test">Test</a>
+#### <a href="../数据库表设计.md#testSub">TestSub</a>
+#### <a href="../数据库表设计.md#testScore">TestScore</a>
+#### <a href="../数据库表设计.md#testSubTestScore">TestSub_TestScore</a>
 
