--- a/test6/用例/教师选课.md
+++ b/test6/用例/教师选课.md
@@ -59,7 +59,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#account">Account</a>
-### <a href="../数据库表设计#teacher">Teacher</a>
-### <a href="../数据库表设计#course">Course</a>
+### <a href="../数据库表设计.md#account">Account</a>
+### <a href="../数据库表设计.md#teacher">Teacher</a>
+### <a href="../数据库表设计.md#course">Course</a>
 
