--- a/test6/用例/登出.md
+++ b/test6/用例/登出.md
@@ -40,7 +40,7 @@
 
 ## 2. 业务流程(顺序图)  <a href="../src/logout.puml">源码</a>
 
-<img src="../imageslogout.png"/>
+<img src="../images/logout.png"/>
 
 
 ## 3.界面设计
@@ -52,7 +52,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#account">Account</a>
+### <a href="../数据库表设计.md#account">Account</a>
 
 
 
