--- a/test6/用例/登录.md
+++ b/test6/用例/登录.md
@@ -47,7 +47,7 @@
 
 ## 2. 业务流程(顺序图)  <a href="../src/login.puml">源码</a>
 
-<img src="../imageslogin.png"/>
+<img src="../images/login.png"/>
 
 
 ## 3.界面设计
@@ -59,7 +59,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#account">Account</a>
+### <a href="../数据库表设计.md#account">Account</a>
 
 
 
