--- a/test6/用例/学生选课.md
+++ b/test6/用例/学生选课.md
@@ -57,7 +57,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#student">Student</a>
-### <a href="../数据库表设计#course">Course</a>
+### <a href="../数据库表设计.md#student">Student</a>
+### <a href="../数据库表设计.md#course">Course</a>
 
 
