--- a/test6/用例/成绩评定.md
+++ b/test6/用例/成绩评定.md
@@ -57,9 +57,9 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#student">Student</a>
-### <a href="../数据库表设计#test">Test</a>
-### <a href="../数据库表设计#testSub">TestSub</a>
-### <a href="../数据库表设计#testScore">TestScore</a>
+### <a href="../数据库表设计.md#student">Student</a>
+### <a href="../数据库表设计.md#test">Test</a>
+### <a href="../数据库表设计.md#testSub">TestSub</a>
+### <a href="../数据库表设计.md#testScore">TestScore</a>
 
 
