--- a/test6/数据库表设计.md
+++ b/test6/数据库表设计.md
@@ -4,7 +4,7 @@
 	<td>字段</td>
 	<td>类型</td>
 	<td>主键、外键</td>
-	<td>可以为空</td>
+	<td>是否为空</td>
 	<td>默认值</td>
 	<td>约束</td>
 	<td>说明</td>
@@ -72,7 +72,7 @@
 	<td>字段</td>
 	<td>类型</td>
 	<td>主键、外键</td>
-	<td>可以为空</td>
+	<td>是否为空</td>
 	<td>默认值</td>
 	<td>约束</td>
 	<td>说明</td>
@@ -115,7 +115,7 @@
 	<td>字段</td>
 	<td>类型</td>
 	<td>主键、外键</td>
-	<td>可以为空</td>
+	<td>是否为空</td>
 	<td>默认值</td>
 	<td>约束</td>
 	<td>说明</td>
@@ -184,7 +184,7 @@
 	<td>字段</td>
 	<td>类型</td>
 	<td>主键、外键</td>
-	<td>可以为空</td>
+	<td>是否为空</td>
 	<td>默认值</td>
 	<td>约束</td>
 	<td>说明</td>
