--- a/test6/用例/登录.md
+++ b/test6/用例/登录.md
@@ -32,13 +32,12 @@
 <tr>
 	<td>备选流事件</td>
 	<td>
-	1a.输入的用户名或者密码为空 <br> 
-	 &nbsp;1.提示输入不能为空 <br>    
-	 &nbsp;2.重新输入后需再次提交表单<br><br>
-
-	2a.输入的用户名或者密码错误<br>
-	 &nbsp;1.修改用户名或者密码 <br>    
-	 &nbsp;2.重新输入后需再次提交表单
+		1a.输入的用户名或者密码为空 <br> 
+		 &nbsp;1.提示输入不能为空 <br>    
+		 &nbsp;2.重新输入后需再次提交表单<br>
+		2a.输入的用户名或者密码错误 <br>
+		 &nbsp;1.修改用户名或者密码 <br>    
+		 &nbsp;2.重新输入后需再次提交表单
 	</td>	
 </tr>
 	
