--- a/test6/用例/个人信息修改.md
+++ b/test6/用例/个人信息修改.md
@@ -35,8 +35,7 @@
 		 &nbsp;2.重新输入后需再次提交表单<br><br>
 		2b.数据修改异常，服务器内部错误 <br> 
 		 &nbsp;1.刷新页面后，重新填写修改信息 <br>    
-		 &nbsp;2.重新输入后需再次提交表单<br><br>
-
+		 &nbsp;2.重新输入后需再次提交表单
 	</td>	
 </tr>
 	
