--- a/test6/用例/学生信息列表查询.md
+++ b/test6/用例/学生信息列表查询.md
@@ -41,7 +41,7 @@
 
 ## 2. 业务流程(顺序图)  <a href="../src/queryStudentList.puml">源码</a>
 
-<img src="../images/queryStudentList.png"/>
+<img src="../images/studentListInfo.png"/>
 
 
 ## 3.界面设计
