--- a/test6/用例/学生选课.md
+++ b/test6/用例/学生选课.md
@@ -30,13 +30,12 @@
 <tr>
 	<td>备选流事件</td>
 	<td>
-	1a.请勿重复选择该课程 <br> 
-	 &nbsp;1.选择未选的课程 <br>    
-	 &nbsp;2.重新输入后需再次提交表单<br><br>
-
-	2a.课程暂未开课<br>
-	 &nbsp;1.重新选择开课的课程 <br>    
-	 &nbsp;2.重新输入后需再次提交表单
+		1a.请勿重复选择该课程 <br> 
+		 &nbsp;1.选择未选的课程 <br>    
+		 &nbsp;2.重新输入后需再次提交表单<br>	
+		2a.课程暂未开课<br>
+		 &nbsp;1.重新选择开课的课程 <br>    
+		 &nbsp;2.重新输入后需再次提交表单
 	</td>	
 </tr>
 	
