--- a/test6/用例/密码修改.md
+++ b/test6/用例/密码修改.md
@@ -31,13 +31,12 @@
 <tr>
 	<td>备选流事件</td>
 	<td>
-	1a.输入的新密码为空 <br> 
-	 &nbsp;1.提示密码不能为空 <br>    
-	 &nbsp;2.重新输入后需再次提交表单<br><br>
-
-	2a.输入的密码不合法<br>
-	 &nbsp;1.修改输入的密码值，同时包含数字、字母、特殊符号 <br>    
-	 &nbsp;2.重新输入后需再次提交表单
+		1a.输入的新密码为空 <br> 
+		 &nbsp;1.提示密码不能为空 <br>    
+		 &nbsp;2.重新输入后需再次提交表单 <br>
+		2a.输入的密码不合法 <br>
+		 &nbsp;1.修改输入的密码值，同时包含数字、字母、特殊符号 <br>    
+		 &nbsp;2.重新输入后需再次提交表单
 	</td>	
 </tr>
 	
