--- a/test6/用例/成绩评定.md
+++ b/test6/用例/成绩评定.md
@@ -30,13 +30,12 @@
 <tr>
 	<td>备选流事件</td>
 	<td>
-	1a.输入的分数为空 <br> 
-	 &nbsp;1.提示输入不能为空 <br>    
-	 &nbsp;2.重新输入后需再次提交表单<br><br>
-
-	2a.输入的分数值不合法<br>
-	 &nbsp;1.重新输入合法的分数值 <br>    
-	 &nbsp;2.重新输入后需再次提交表单
+		1a.输入的分数为空 <br> 
+		 &nbsp;1.提示输入不能为空 <br>    
+		 &nbsp;2.重新输入后需再次提交表单<br>	
+		2a.输入的分数值不合法<br>
+		 &nbsp;1.重新输入合法的分数值 <br>    
+		 &nbsp;2.重新输入后需再次提交表单
 	</td>	
 </tr>
 	
