--- a/test6/用例/教师选课.md
+++ b/test6/用例/教师选课.md
@@ -30,15 +30,14 @@
 <tr>
 	<td>备选流事件</td>
 	<td>
-	1a.已选择了该课程 <br> 
-	 &nbsp;1.提示不能重复选择 <br>    
-	 &nbsp;2.重新选择其他值后,需再次提交表单<br><br>
-
-	2b.不能选择该课程<br>
-	 &nbsp;1.提示不能教授该课程请选择可教授的课程 <br>    
-	 &nbsp;2.重新选则后需再次提交表单<br><br>
-	3c.已选满了课程<br>
-	 &nbsp;1.提示不能选择课程，已选完了可教授的课程 <br>
+		1a.已选择了该课程 <br> 
+		 &nbsp;1.提示不能重复选择 <br>    
+		 &nbsp;2.重新选择其他值后,需再次提交表单 <br>	
+		2b.不能选择该课程<br>
+		 &nbsp;1.提示不能教授该课程请选择可教授的课程 <br>    
+		 &nbsp;2.重新选则后需再次提交表单 <br> 
+		3c.已选满了课程 <br>
+		 &nbsp;1.提示不能选择课程，已选完了可教授的课程
 	</td>	
 </tr>
 	
