--- a/test6/用例/密码修改.md
+++ b/test6/用例/密码修改.md
@@ -45,11 +45,11 @@
 
 ## 2. 业务流程(顺序图)  <a href="../src/updatePassword.puml">源码</a>
 
-<img src="../images/updatePassowrd.png"/>
+<img src="../images/updatePassword.png"/>
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html">https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html</a>
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="../UI/updatepwd.html">https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html</a>
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口: <a href="../接口/updatePassword.md">updatePassword</a>
 
