--- a/test6/用例/学生选课.md
+++ b/test6/用例/学生选课.md
@@ -48,7 +48,7 @@
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="https://FateBaserker.github.io/is_analysis/test6/UI/student.html">https://FateBaserker.github.io/is_analysis/test6/UI/student.html</a>
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="../UI/selectcourse.html">https://FateBaserker.github.io/is_analysis/test6/UI/selectcourse.html</a>
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口: <a href="../接口/studentSelectCourse.md">studentSelectCourse</a>
 
