--- a/test6/用例/成绩评定.md
+++ b/test6/用例/成绩评定.md
@@ -48,7 +48,7 @@
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="https://FateBaserker.github.io/is_analysis/test6/UI/makeScore.html">https://FateBaserker.github.io/is_analysis/test6/UI/makeScore.html</a>
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="../UI/makescore.html">https://FateBaserker.github.io/is_analysis/test6/UI/makescore.html</a>
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口1: <a href="../接口/setTestScore.md">setTestScore</a>
 
