--- a/test6/用例/成绩查询.md
+++ b/test6/用例/成绩查询.md
@@ -43,12 +43,7 @@
 
 
 ## 3.界面设计
-<ul>
-	<li>
-		<a href="https://FateBaserker.github.io/is_analysis/test6/UI/student.html">https://FateBaserker.github.io/is_analysis/test6/UI/student.html</a>
-	</li>
-</ul>
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:<a href="../UI/student.html">https://FateBaserker.github.io/is_analysis/test6/UI/student.html</a>
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/student.html](https://FateBerserker.github.io/is_analysis/test6/UI/student.html)
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口1: <a href="../接口/queryScore.md">queryScore</a>
 
