--- a/test6/用例/学生信息列表查询.md
+++ b/test6/用例/学生信息列表查询.md
@@ -45,7 +45,7 @@
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/teacher.html](https://FateBaserker.github.io/is_analysis/test6/UI/teacher.html)
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/teacher.html](https://FateBerserker.github.io/is_analysis/test6/UI/teacher.html)
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口: <a href="../接口/queryStudentList.md">queryStudentList</a>
 
