--- a/test6/用例/密码修改.md
+++ b/test6/用例/密码修改.md
@@ -49,7 +49,7 @@
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html](https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html)
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/updatepwd.html](https://FateBerserker.github.io/is_analysis/test6/UI/updatepwd.html)
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口: <a href="../接口/updatePassword.md">updatePassword</a>
 
