--- a/test6/用例/登出.md
+++ b/test6/用例/登出.md
@@ -44,7 +44,7 @@
 
 
 ## 3.界面设计
-#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/student.html](https://FateBaserker.github.io/is_analysis/test6/UI/student.html)
+#### &nbsp;&nbsp;&nbsp;&nbsp;界面参照:[https://FateBaserker.github.io/is_analysis/test6/UI/student.html](https://FateBerserker.github.io/is_analysis/test6/UI/student.html)
 #### &nbsp;&nbsp;&nbsp;&nbsp;API接口调用
 ##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接口1: <a href="../接口/logout.md">logout</a>
 
