--- a/test6/用例/教师选课.md
+++ b/test6/用例/教师选课.md
@@ -44,7 +44,7 @@
 </table>		
 
 
-## 2. 业务流程(顺序图)  <a href="../teacherSelectCourse.puml">源码</a>
+## 2. 业务流程(顺序图)  <a href="../src/teacherSelectCourse.puml">源码</a>
 
 <img src="../images/teacherSelectCourse.png"/>
 
