--- a/test6/用例/个人信息修改.md
+++ b/test6/用例/个人信息修改.md
@@ -56,7 +56,7 @@
 无
 
 ## 5.参照表
-### <a href="../数据库表设计#account.md#account">Account</a>
-### <a href="../数据库表设计#student.md#student">Student</a>
-### <a href="../数据库表设计#teacher#teacher">Teacher</a>
+### <a href="../数据库表设计.md#account">Account</a>
+### <a href="../数据库表设计.md#student">Student</a>
+### <a href="../数据库表设计.md#teacher">Teacher</a>
 
